--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Public Sans', "Segoe UI", "Inter", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: 'Public Sans', "Segoe UI", "Inter", "Roboto", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -9,6 +8,5 @@ body {
 }
 
 code {
-  font-family: Public Sans, Menlo, Monaco, Consolas, Inter, "Courier New",
-    monospace;
+  font-family: Public Sans, Inter, monospace;
 }
