--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,11 +1,10 @@
 #experience {
   min-height: 50vh;
   margin: auto;
-  max-width: 800px;
+  max-width: 900px;
   align-content: center;
   justify-content: center;
   margin-top: 200px;
-  padding-bottom: 100px;
 }
 
 .joblist-root {
@@ -25,7 +24,7 @@
 .joblist-tab {
   background: none;
   border: none;
-  color: var(--off-white);
+  color: var(--lightest-slate);
   padding: 1rem 1.5rem;
   cursor: pointer;
   text-align: left;
@@ -34,9 +33,9 @@
   outline: none;
 }
 
+
 .joblist-tab.active,
 .joblist-tab:focus {
-  background: var(--color-select);
   color: var(--green-bright);
   font-weight: bold;
   border-left: 3px solid var(--green-bright);
@@ -70,7 +69,7 @@
 .joblist-duration {
   font-family: "NTR", sans-serif;
   font-size: 16px;
-  color: var(--off-white);
+  color: var(--lightest-slate);
   margin-bottom: 1rem;
 }
 
@@ -90,7 +89,7 @@ ul {
   padding-left: 30px;
   padding-bottom: 16px;
   font-size: 18px;
-  color: var(--off-white);
+  color: var(--lightest-slate);
 }
 
 .job-description li::before {
@@ -102,6 +101,7 @@ ul {
 
 @media only screen and (max-width: 600px) {
   #experience {
+    margin-top: 100px;
     padding-left: unset;
     padding-right: unset;
   }
