--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,15 +1,18 @@
 :root {
-  --lightest-slate: #ccd6f6; /* Headings */
+  --lightest-slate: #e2e8fd; /* Headings */
   --nav-color: #03141a10; /* NavBar */
-  --mobile-nav: #03141aee; /* NavBar */
+  --mobile-nav: #03141ad5; /* NavBar */
   --linear-gradient: linear-gradient(to bottom,#03141a 0%,#030817 20%, #060a17 40%, #030817 60%); /* Page Background Color */
   --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
-  --color-hover: #101224; /* Box Color, Hover Color */
-  --color-select: #030817; /* Select Color */
+  --color-hover: rgba(11, 15, 29); /* Box Color, Hover Color */
+  --color-select: rgba(11, 15, 29, 0.8); /* Select Color */
   --off-white: #a8b2d1; /* TEXT MAIN */
-  --navy: #0E192D; /* Project Boxes */
+  --navy: #0E192D; /* Selection */
   --light-grey: #3d3d3d; /* Divider */
   --shadow: 0 4px 4px #0e0e0e60; /* Shadow */
   --shadow-box: 0 0 12px #000000c9; /* Shadow */
+  --drop-shadow: drop-shadow(0 3px 4px rgb(0, 255, 85)); /* Drop Shadow */
   --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ 
+  --bottom-gradient: linear-gradient(to right, var(--green-bright), var(--off-white), var(--green-bright), var(--off-white), var(--green-bright)); /* Bottom Border Gradient */
+  --gradient-border: linear-gradient(120deg,rgba(100, 217, 138, 0.8),rgba(100, 217, 138, 0.1),rgba(65, 199, 199, 0.6),rgba(100, 217, 138, 0.2));
 }
