--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -3,37 +3,39 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  padding-left: 60px;
+  margin: 0 0 10px 25px;
+
   align-items: center;
   width: 60px;
-  gap: 30px;
+  gap: 25px;
   z-index: 500;
 }
 .side-navbar a {
-  color: var(--off-white) !important;
+  color: var(--lightest-slate) !important;
 }
 .side-navbar a:hover {
   color: var(--green-bright) !important;
   scale:1.1;
-  filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.7));
+  filter: var(--drop-shadow);
   transition: var(--transition);
 }
 
 .side-navbar-divider {
   width: 30px;
   height: 1.5px;
+  margin-bottom: 10px;
   background-color: var(--green-bright);
   border-radius: 10px;
-  filter: drop-shadow(0 3px 4px rgb(0, 255, 85));
+  filter: var(--drop-shadow);
 }
 
 .side-navbar button.star-btn {
   background: none;
   border: none;
   margin: 0 0 40px 0;
-  color: var(--off-white);
+  color: var(--lightest-slate);
   cursor: pointer;
-  font-size: 28px;
+  font-size: 32px;
   padding: 0;
   transition: color 0.2s;
   display: flex;
@@ -44,6 +46,7 @@
   color: var(--green-bright) !important;
   scale:1.1;
   transition: var(--transition);
+  filter: var(--drop-shadow);
 }
 
 .sidenav-icon {
